--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.16.2",
     "hbs": "^4.0.1",
     "serialport": "^6.1.1",
+    "socket.io": "^2.0.4",
     "string_decoder": "^1.0.3",
     "xbee-api": "^0.6.0"
   }
