Refactor and modularized mqtt_publish

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "express": "^4.16.2",
     "hbs": "^4.0.1",
+    "moment": "^2.21.0",
     "mqtt": "^2.16.0",
     "serialport": "^6.1.1",
     "socket.io": "^2.0.4"
