--- a/server/bower.json
+++ b/server/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "Smart Trash Bin Server",
+  "name": "smart-trash-bin-server",
   "main": "server.js",
   "homepage": "https://github.com/Ollen/smart-trash-bin",
   "authors": [
@@ -20,6 +20,7 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "^4.0.0"
+    "bootstrap": "^4.0.0",
+    "popper.js": "^1.14.1"
   }
 }
