--- a/server/bower.json
+++ b/server/bower.json
@@ -21,6 +21,7 @@
   ],
   "dependencies": {
     "bootstrap": "^4.0.0",
-    "popper.js": "^1.14.1"
+    "popper.js": "^1.14.1",
+    "chart.js": "^2.7.2"
   }
 }
