Add mysql library

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "hbs": "^4.0.1",
     "moment": "^2.21.0",
     "mqtt": "^2.16.0",
+    "mysql": "^2.15.0",
     "serialport": "^6.1.1",
     "socket.io": "^2.0.4"
   }
