--- a/server/bower.json
+++ b/server/bower.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0",
     "popper.js": "^1.14.1",
-    "chart.js": "^2.7.2"
+    "chart.js": "^2.7.2",
+    "Font-Awesome": "^5.0.9"
   }
 }
