--- a/server/bower.json
+++ b/server/bower.json
@@ -23,6 +23,8 @@
     "bootstrap": "^4.0.0",
     "popper.js": "^1.14.1",
     "chart.js": "^2.7.2",
-    "Font-Awesome": "^5.0.9"
+    "Font-Awesome": "^5.0.9",
+    "jquery": "^3.3.1",
+    "socket.io-client": "^2.1.0"
   }
 }
