Add bootstrap-table dependency

--- a/server/bower.json
+++ b/server/bower.json
@@ -25,6 +25,7 @@
     "chart.js": "^2.7.2",
     "Font-Awesome": "^5.0.9",
     "jquery": "^3.3.1",
-    "socket.io-client": "^2.1.0"
+    "socket.io-client": "^2.1.0",
+    "bootstrap-table": "^1.12.1"
   }
 }
